--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "fastify": "^4.13.0",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "node-dev": "^8.0.0",
+    "nodemon": "^2.0.20",
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.1"
   }
 }
