--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "build": "buf generate proto",
-    "dev": "tsx server.ts"
+    "dev": "run-p dev:*",
+    "dev:proto": "nodemon -L",
+    "dev:server": "tsx watch server.ts"
   },
   "dependencies": {
     "@bufbuild/buf": "^1.15.0",
@@ -16,13 +18,12 @@
     "@bufbuild/protoc-gen-connect-es": "^0.8.1",
     "@bufbuild/protoc-gen-es": "^1.0.0",
     "fastify": "^4.13.0",
-    "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "node-dev": "^8.0.0",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
+    "tsx": "^3.12.3",
     "ts-node": "^10.9.1"
   }
 }
