--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@bufbuild/protobuf": "^1.0.0",
     "@bufbuild/protoc-gen-connect-es": "^0.8.1",
     "@bufbuild/protoc-gen-es": "^1.0.0",
+    "@fastify/cors": "^8.2.0",
+    "@fastify/helmet": "^10.1.0",
     "fastify": "^4.13.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
-    "tsx": "^3.12.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.3"
   }
 }
